<resources>
    <string name="app_name">ToDoApplication</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="taskTitle">Title</string>
    <string name="add_task">"+  Add Task "</string>
    <string name="Description">Description</string>
    <string name="insert_button">Save</string>
    <string name="Cancel_button">Cancel</string>
    <string name="update_button">Update</string>
    <string name="email_Example">Example@gamil.com</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="dont_have_Acount">Don\'t have account ?</string>
    <string name="create_account">Create account</string>
    \
    <string name="open">Open</string>
    <string name="close">Close</string>

    <string-array name="filter_spinner_elements">
        <item>All Tasks</item>
        <item>due date</item>
        <item>Location</item>
        <item>Location</item>
        <item>Completed</item>
        <item>Un Completed</item>

    </string-array>
</resources>